2008-07-30  Chong Yidong  <cyd@stupidchicken.com>

	* minibuf.c (Vread_buffer_function): Doc fix.

2008-07-30  John Paul Wallington  <jpw@pobox.com>

	* minibuf.c (read_buffer_completion_ignore_case): New var.
	(Fread_buffer): Use it.

2008-07-30  Dan Nicolaescu  <dann@ics.uci.edu>

	* systty.h (sensemode): Remove empty #if.  Remove reference to
	BSD_TERMIOS, unused.

	* sysdep.c: Remove reference to DGUX.
	(closedir): Remove reference to BROKEN_CLOSEDIR, unused.

	* config.in: Regenerate.

2008-07-30  Jason Rumney  <jasonr@gnu.org>

        * w32uniscribe.c (uniscribe_encode_char): Fix glyph buffer size.

2008-07-29  Jason Rumney  <jasonr@gnu.org>

        * w32uniscribe.c (uniscribe_shape): Avoid using context if cache
        is populated.
        (uniscribe_encode_char): Always use uniscribe.
        Avoid using context if cache is populated.

2008-07-29  Jan Djärv  <jan.h.d@swipnet.se>

	* xmenu.c (Fx_menu_bar_open_internal): Use activate_item signal to
	open menu.

	* gtkutil.c (menu_nav_ended): Remove.
	(create_menus): Remove signal connect for menu_nav_ended.

2008-07-28  Chong Yidong  <cyd@stupidchicken.com>

	* xdisp.c (redisplay_window): Check return value of
	compute_window_start_on_continuation_line before forcing a window
	start.

2008-07-28  Jason Rumney  <jasonr@gnu.org>

	* w32font.c (w32font_text_extents): Use w32_metric_cache consistently.

	* w32term.c (w32_enable_unicode_output, cleartype_active):
	Remove obsolete display options.
	(x_draw_glyph_string_background): Don't use old cleartype_active
	workaround.
	(w32_initialize): Remove cleartype_active initialization.
	(syms_of_w32term): Remove w32_enable_unicode_output initialization.

2008-07-28  Andreas Schwab  <schwab@suse.de>

	* lisp.h (init_weak_hash_tables, syms_of_font)
	(xd_read_queued_messages, syms_of_dbusbind): Declare.
	(remove_hash_entry): Don't declare.
	* eval.c (maybe_call_debugger): Make static and move before use.
	* gtkutil.c: Include <X11/Xft/Xft.h> if HAVE_XFT.